build based on 3cea7fd

--- a/previews/PR447/examples/docs_4_rational_opt/index.html
+++ b/previews/PR447/examples/docs_4_rational_opt/index.html
@@ -34,17 +34,17 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   4.677196e-01   2.138033e+01
-    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   4.690333e-01   4.264089e+01
-    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   4.703414e-01   6.378346e+01
-    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   4.717080e-01   8.479822e+01
-    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   4.731670e-01   1.056709e+02
-    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   4.747498e-01   1.263824e+02
-    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   4.765549e-01   1.468876e+02
-    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   4.783912e-01   1.672272e+02
-    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   4.803042e-01   1.873812e+02
-    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   4.823005e-01   2.073396e+02
-  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   4.830127e-01   2.091042e+02
+    FW            10   1.407407e-01  -1.407407e-01   2.814815e-01   4.549118e-01   2.198228e+01
+    FW            20   6.842105e-02  -6.842105e-02   1.368421e-01   4.564603e-01   4.381542e+01
+    FW            30   4.521073e-02  -4.521073e-02   9.042146e-02   4.579882e-01   6.550387e+01
+    FW            40   3.376068e-02  -3.376068e-02   6.752137e-02   4.597016e-01   8.701296e+01
+    FW            50   2.693878e-02  -2.693878e-02   5.387755e-02   4.614275e-01   1.083594e+02
+    FW            60   2.241055e-02  -2.241055e-02   4.482109e-02   4.633151e-01   1.295015e+02
+    FW            70   1.918565e-02  -1.918565e-02   3.837129e-02   4.653810e-01   1.504144e+02
+    FW            80   1.677215e-02  -1.677215e-02   3.354430e-02   4.675607e-01   1.711008e+02
+    FW            90   1.489804e-02  -1.489804e-02   2.979609e-02   4.700377e-01   1.914740e+02
+    FW           100   1.340067e-02  -1.340067e-02   2.680135e-02   4.727201e-01   2.115417e+02
+  Last           101   1.314422e-02  -1.236767e-02   2.551189e-02   4.736517e-01   2.132368e+02
 -------------------------------------------------------------------------------------------------
 
 Output type of solution: BigFloat</code></pre><p>Another possible step-size rule is <code>rationalshortstep</code> which computes the step size by minimizing the smoothness inequality as <span>$\gamma_t=\frac{\langle \nabla f(x_t),x_t-v_t\rangle}{2L||x_t-v_t||^2}$</span>. However, as this step size depends on an upper bound on the Lipschitz constant <span>$L$</span> as well as the inner product with the gradient <span>$\nabla f(x_t)$</span>, both have to be of a rational type.</p><pre><code class="language-julia hljs">@time x, v, primal, dual_gap, trajectory = FrankWolfe.frank_wolfe(
@@ -67,16 +67,16 @@ LMO: FrankWolfe.ProbabilitySimplexOracle{Rational{BigInt}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.000000e+00  -1.000000e+00   2.000000e+00   0.000000e+00            Inf
-    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   4.588416e-01   2.179401e+01
-    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   4.602537e-01   4.345429e+01
-    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   4.616124e-01   6.498959e+01
-    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   4.631250e-01   8.636977e+01
-    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   4.648214e-01   1.075682e+02
-    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   4.666694e-01   1.285707e+02
-    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   4.686721e-01   1.493582e+02
-    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.708000e-01   1.699235e+02
-    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.731492e-01   1.902148e+02
-    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.756518e-01   2.102378e+02
-  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.762248e-01   2.099849e+02
+    FW            10   1.000000e-01  -1.000000e-01   2.000000e-01   3.935117e-01   2.541220e+01
+    FW            20   5.000000e-02  -5.000000e-02   1.000000e-01   3.952879e-01   5.059604e+01
+    FW            30   3.333333e-02  -3.333333e-02   6.666667e-02   3.973282e-01   7.550433e+01
+    FW            40   2.500000e-02  -2.500000e-02   5.000000e-02   3.998376e-01   1.000406e+02
+    FW            50   2.000000e-02  -2.000000e-02   4.000000e-02   4.027233e-01   1.241547e+02
+    FW            60   1.666667e-02  -1.666667e-02   3.333333e-02   4.061197e-01   1.477397e+02
+    FW            70   1.428571e-02  -1.428571e-02   2.857143e-02   4.098827e-01   1.707806e+02
+    FW            80   1.250000e-02  -1.250000e-02   2.500000e-02   4.139176e-01   1.932752e+02
+    FW            90   1.111111e-02  -1.111111e-02   2.222222e-02   4.185092e-01   2.150490e+02
+    FW           100   1.000000e-02   1.000000e-02   1.889162e-78   4.235464e-01   2.361017e+02
+  Last           100   1.000000e-02   1.000000e-02   2.159042e-78   4.245721e-01   2.355313e+02
 -------------------------------------------------------------------------------------------------
-  0.733188 seconds (1.65 M allocations: 92.654 MiB, 6.41% gc time, 1.54% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 16 November 2023 17:29">Thursday 16 November 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  0.662810 seconds (1.65 M allocations: 92.573 MiB, 1.55% compilation time)</code></pre><p>Note: at the last step, we exactly close the gap, finding the solution 1//n * ones(n)</p><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_3_matrix_completion/">« Matrix Completion</a><a class="docs-footer-nextpage" href="../docs_5_blended_cg/">Blended Conditional Gradients »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 16 November 2023 17:45">Thursday 16 November 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
