--- a/previews/PR450/examples/docs_10_alternating_methods/index.html
+++ b/previews/PR450/examples/docs_10_alternating_methods/index.html
@@ -48,11 +48,11 @@ MOMENTUM: nothing GRADIENTTYPE: FrankWolfe.BlockVector{Float64, Vector{Float64},
 ----------------
 
   3.778464e+00
-    FW          1000   5.000047e-02   4.988536e-02   1.151053e-04   6.990530e-01   1.430507e+03
+    FW          1000   5.000047e-02   4.988536e-02   1.151053e-04   7.290313e-01   1.371683e+03
   5.000047e-02
-    FW          2000   5.000000e-02   4.999558e-02   4.423306e-06   7.055106e-01   2.834826e+03
+    FW          2000   5.000000e-02   4.999558e-02   4.423306e-06   7.387160e-01   2.707400e+03
   5.000000e-02
-  Last          2445   5.000000e-02   4.999898e-02   1.022986e-06   1.044285e+00   2.341316e+03
+  Last          2445   5.000000e-02   4.999898e-02   1.022986e-06   1.134649e+00   2.154851e+03
 -------------------------------------------------------------------------------------------------
   5.000000e-02
 ----------------
@@ -73,11 +73,11 @@ MOMENTUM: nothing GRADIENTTYPE: FrankWolfe.BlockVector{Float64, Vector{Float64},
 ----------------
 
   3.778464e+00
-    FW          1000   5.000047e-02   4.988833e-02   1.121389e-04   7.106678e-03   1.407127e+05
+    FW          1000   5.000047e-02   4.988833e-02   1.121389e-04   1.177242e-02   8.494433e+04
   5.000047e-02
-    FW          2000   5.000000e-02   4.999569e-02   4.308009e-06   1.426349e-02   1.402181e+05
+    FW          2000   5.000000e-02   4.999569e-02   4.308009e-06   2.394288e-02   8.353214e+04
   5.000000e-02
-  Last          2446   5.000000e-02   4.999898e-02   1.018029e-06   2.001014e-02   1.222380e+05
+  Last          2446   5.000000e-02   4.999898e-02   1.018029e-06   2.954445e-02   8.279050e+04
 -------------------------------------------------------------------------------------------------
   5.000000e-02
 ----------------
@@ -92,17 +92,17 @@ MOMENTUM: nothing GRADIENTTYPE: FrankWolfe.BlockVector{Float64, Vector{Float64},
 -------------------------------------------------------------------------------------------------
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
-     I             1   3.778464e+00  -4.022154e+01   4.400000e+01   0.000000e+00            Inf
+     I             1   5.732358e-01  -4.342676e+01   4.400000e+01   0.000000e+00            Inf
 ----------------
         Infeas
 ----------------
 
-  3.778464e+00
-    FW          1000   5.000050e-02   4.988433e-02   1.161712e-04   8.324492e-02   1.201275e+04
-  5.000050e-02
-    FW          2000   5.000000e-02   4.999537e-02   4.626972e-06   9.227481e-02   2.167439e+04
+  5.732358e-01
+    FW          1000   5.000047e-02   4.988482e-02   1.156435e-04   8.709992e-02   1.148107e+04
+  5.000047e-02
+    FW          2000   5.000000e-02   4.999589e-02   4.110611e-06   9.917779e-02   2.016581e+04
   5.000000e-02
-  Last          2473   5.000000e-02   4.999900e-02   1.002898e-06   9.840946e-02   2.512970e+04
+  Last          2463   5.000000e-02   4.999897e-02   1.026972e-06   1.050261e-01   2.345132e+04
 -------------------------------------------------------------------------------------------------
   5.000000e-02
 ----------------</code></pre><p>As an alternative to Block-Coordiante Frank-Wolfe (BCFW), one can also run alternating linear minimization with standard Frank-Wolfe algorithm. These methods perform then the full (simulatenous) update at each iteration. In this example we also use <a href="../../reference/1_algorithms/#FrankWolfe.away_frank_wolfe-NTuple{4, Any}"><code>FrankWolfe.away_frank_wolfe</code></a>.</p><pre><code class="language-julia hljs">_, _, _, _, _, afw_trajectory = FrankWolfe.alternating_linear_minimization(
@@ -132,11 +132,11 @@ LMO: FrankWolfe.ProductLMO{2, Tuple{FrankWolfe.ProbabilitySimplexOracle{Float64}
 ----------------
 
   2.010582e+00
-  Last           171   5.000000e-02   4.999908e-02   9.177388e-07   9.910999e-01   1.725356e+02             84
+  Last           171   5.000000e-02   4.999908e-02   9.177388e-07   9.599811e-01   1.781285e+02             84
 ----------------------------------------------------------------------------------------------------------------
   5.000000e-02
 ----------------
-    PP           171   5.000000e-02   4.999908e-02   9.177388e-07   1.068502e+00   1.600371e+02             84
+    PP           171   5.000000e-02   4.999908e-02   9.177388e-07   1.035106e+00   1.652004e+02             84
 ----------------------------------------------------------------------------------------------------------------
   5.000000e-02
 ----------------</code></pre><h2 id="Running-Alternating-Projections"><a class="docs-heading-anchor" href="#Running-Alternating-Projections">Running Alternating Projections</a><a id="Running-Alternating-Projections-1"></a><a class="docs-heading-anchor-permalink" href="#Running-Alternating-Projections" title="Permalink"></a></h2><p>Unlike ALM, Alternating Projections (AP) is only suitable for feasibility problems. One omits the objective and gradient as parameters.</p><pre><code class="language-julia hljs">_, _, _, _, ap_trajectory = FrankWolfe.alternating_projections(
@@ -156,18 +156,18 @@ GRADIENTTYPE: Vector{Vector{Float64}}
 ----------------------------------------------------------------------------------
   Type     Iteration       Dual Gap         Infeas           Time         It/sec
 ----------------------------------------------------------------------------------
-     I             1   4.045333e-01   2.022666e-01   0.000000e+00            Inf
-    FW           100   1.045308e-04   5.000040e-02   1.193298e+00   8.380139e+01
-    FW           200   2.524997e-05   5.000002e-02   1.702896e+00   1.174470e+02
-    FW           300   1.122811e-05   5.000000e-02   2.331990e+00   1.286455e+02
-    FW           400   6.334101e-06   5.000000e-02   3.064666e+00   1.305199e+02
-    FW           500   4.028960e-06   5.000000e-02   3.843813e+00   1.300792e+02
-    FW           600   2.823896e-06   5.000000e-02   4.673728e+00   1.283772e+02
-    FW           700   2.088682e-06   5.000000e-02   5.579087e+00   1.254686e+02
-    FW           800   1.569986e-06   5.000000e-02   6.489356e+00   1.232788e+02
-    FW           900   1.258972e-06   5.000000e-02   7.410374e+00   1.214514e+02
-    FW          1000   9.944106e-07   5.000000e-02   8.380675e+00   1.193221e+02
-  Last          1000   9.944106e-07   5.000000e-02   8.386726e+00   1.192360e+02
+     I             1   4.032960e-01   2.016480e-01   0.000000e+00            Inf
+    FW           100   1.045308e-04   5.000040e-02   1.213021e+00   8.243883e+01
+    FW           200   2.524997e-05   5.000002e-02   1.747790e+00   1.144302e+02
+    FW           300   1.122811e-05   5.000000e-02   2.439899e+00   1.229559e+02
+    FW           400   6.334101e-06   5.000000e-02   3.197530e+00   1.250965e+02
+    FW           500   4.028960e-06   5.000000e-02   4.048418e+00   1.235050e+02
+    FW           600   2.823896e-06   5.000000e-02   4.930425e+00   1.216934e+02
+    FW           700   2.088682e-06   5.000000e-02   5.856642e+00   1.195224e+02
+    FW           800   1.569986e-06   5.000000e-02   6.842017e+00   1.169246e+02
+    FW           900   1.258972e-06   5.000000e-02   7.855167e+00   1.145743e+02
+    FW          1000   9.944106e-07   5.000000e-02   8.923578e+00   1.120627e+02
+  Last          1000   9.944106e-07   5.000000e-02   8.929768e+00   1.119850e+02
 ----------------------------------------------------------------------------------</code></pre><h2 id="Plotting-the-resulting-trajectories"><a class="docs-heading-anchor" href="#Plotting-the-resulting-trajectories">Plotting the resulting trajectories</a><a id="Plotting-the-resulting-trajectories-1"></a><a class="docs-heading-anchor-permalink" href="#Plotting-the-resulting-trajectories" title="Permalink"></a></h2><pre><code class="language- hljs">labels = [&quot;BCFW - Full&quot;, &quot;BCFW - Cyclic&quot;, &quot;BCFW - Stochastic&quot;, &quot;AFW&quot;, &quot;AP&quot;]
 
-plot_trajectories(trajectories, labels, xscalelog=true)</code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_0_fw_visualized/">« Visualization of Frank-Wolfe running on a 2-dimensional polytope</a><a class="docs-footer-nextpage" href="../docs_1_mathopt_lmo/">Comparison with MathOptInterface on a Probability Simplex »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Wednesday 29 November 2023 10:46">Wednesday 29 November 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+plot_trajectories(trajectories, labels, xscalelog=true)</code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_0_fw_visualized/">« Visualization of Frank-Wolfe running on a 2-dimensional polytope</a><a class="docs-footer-nextpage" href="../docs_1_mathopt_lmo/">Comparison with MathOptInterface on a Probability Simplex »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Wednesday 29 November 2023 17:15">Wednesday 29 November 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
