--- a/previews/PR450/examples/docs_6_spectrahedron/index.html
+++ b/previews/PR450/examples/docs_6_spectrahedron/index.html
@@ -67,7 +67,7 @@ LMO: FrankWolfe.SpectraplexLMO{Float64, Matrix{Float64}}
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
      I             1   1.018597e+00   1.014119e+00   4.477824e-03   0.000000e+00            Inf
-  Last            25   1.014314e+00   1.014314e+00   9.179324e-09   1.001755e+00   2.495620e+01
+  Last            25   1.014314e+00   1.014314e+00   9.179324e-09   9.895129e-01   2.526496e+01
 -------------------------------------------------------------------------------------------------
 
 Lazified Conditional Gradient (Frank-Wolfe + Lazification).
@@ -80,15 +80,15 @@ LMO: FrankWolfe.VectorCacheLMO{FrankWolfe.SpectraplexLMO{Float64, Matrix{Float64
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec     Cache Size
 ----------------------------------------------------------------------------------------------------------------
      I             1   1.018597e+00   1.014119e+00   4.477824e-03   0.000000e+00            Inf              1
-    LD             2   1.014317e+00   1.014314e+00   3.630596e-06   1.468252e-01   1.362164e+01              2
-    LD             3   1.014315e+00   1.014314e+00   1.025225e-06   1.840348e-01   1.630126e+01              3
-    LD             4   1.014315e+00   1.014314e+00   5.032060e-07   2.200711e-01   1.817594e+01              4
-    LD             6   1.014314e+00   1.014314e+00   1.996252e-07   2.679828e-01   2.238949e+01              5
-    LD             9   1.014314e+00   1.014314e+00   8.299030e-08   3.489438e-01   2.579212e+01              6
-    LD            13   1.014314e+00   1.014314e+00   3.827847e-08   4.248227e-01   3.060100e+01              7
-    LD            19   1.014314e+00   1.014314e+00   1.745621e-08   5.303761e-01   3.582363e+01              8
-    LD            27   1.014314e+00   1.014314e+00   8.503621e-09   6.679609e-01   4.042153e+01              9
-  Last            27   1.014314e+00   1.014314e+00   7.896182e-09   7.415518e-01   3.641013e+01             10
+    LD             2   1.014317e+00   1.014314e+00   3.630596e-06   1.600674e-01   1.249474e+01              2
+    LD             3   1.014315e+00   1.014314e+00   1.025225e-06   2.014216e-01   1.489413e+01              3
+    LD             4   1.014315e+00   1.014314e+00   5.032060e-07   2.427581e-01   1.647731e+01              4
+    LD             6   1.014314e+00   1.014314e+00   1.996252e-07   3.000005e-01   1.999996e+01              5
+    LD             9   1.014314e+00   1.014314e+00   8.299030e-08   3.706082e-01   2.428441e+01              6
+    LD            13   1.014314e+00   1.014314e+00   3.827847e-08   4.561915e-01   2.849680e+01              7
+    LD            19   1.014314e+00   1.014314e+00   1.745621e-08   5.917163e-01   3.210998e+01              8
+    LD            27   1.014314e+00   1.014314e+00   8.503621e-09   7.359537e-01   3.668709e+01              9
+  Last            27   1.014314e+00   1.014314e+00   7.896182e-09   8.106668e-01   3.330592e+01             10
 ----------------------------------------------------------------------------------------------------------------</code></pre><h2 id="Plotting-the-resulting-trajectories"><a class="docs-heading-anchor" href="#Plotting-the-resulting-trajectories">Plotting the resulting trajectories</a><a id="Plotting-the-resulting-trajectories-1"></a><a class="docs-heading-anchor-permalink" href="#Plotting-the-resulting-trajectories" title="Permalink"></a></h2><pre><code class="language- hljs">data = [trajectory, trajectory_lazy]
 label = [&quot;FW&quot;, &quot;LCG&quot;]
-plot_trajectories(data, label, xscalelog=true)</code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_5_blended_cg/">« Blended Conditional Gradients</a><a class="docs-footer-nextpage" href="../docs_7_shifted_norm_polytopes/">FrankWolfe for scaled, shifted <span>$\ell^1$</span> and <span>$\ell^{\infty}$</span> norm balls »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Wednesday 29 November 2023 10:46">Wednesday 29 November 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+plot_trajectories(data, label, xscalelog=true)</code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_5_blended_cg/">« Blended Conditional Gradients</a><a class="docs-footer-nextpage" href="../docs_7_shifted_norm_polytopes/">FrankWolfe for scaled, shifted <span>$\ell^1$</span> and <span>$\ell^{\infty}$</span> norm balls »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Wednesday 29 November 2023 17:15">Wednesday 29 November 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
