--- a/previews/PR450/examples/docs_10_alternating_methods/index.html
+++ b/previews/PR450/examples/docs_10_alternating_methods/index.html
@@ -48,11 +48,11 @@ MOMENTUM: nothing GRADIENTTYPE: FrankWolfe.BlockVector{Float64, Vector{Float64},
 ----------------
 
   3.778464e+00
-    FW          1000   5.000047e-02   4.988536e-02   1.151053e-04   7.270276e-01   1.375464e+03
+    FW          1000   5.000047e-02   4.988536e-02   1.151053e-04   7.249242e-01   1.379455e+03
   5.000047e-02
-    FW          2000   5.000000e-02   4.999558e-02   4.423306e-06   7.369704e-01   2.713813e+03
+    FW          2000   5.000000e-02   4.999558e-02   4.423306e-06   7.348917e-01   2.721490e+03
   5.000000e-02
-  Last          2445   5.000000e-02   4.999898e-02   1.022986e-06   1.080793e+00   2.262227e+03
+  Last          2445   5.000000e-02   4.999898e-02   1.022986e-06   1.086652e+00   2.250031e+03
 -------------------------------------------------------------------------------------------------
   5.000000e-02
 ----------------
@@ -73,11 +73,11 @@ MOMENTUM: nothing GRADIENTTYPE: FrankWolfe.BlockVector{Float64, Vector{Float64},
 ----------------
 
   3.778464e+00
-    FW          1000   5.000047e-02   4.988833e-02   1.121389e-04   1.150947e-02   8.688500e+04
+    FW          1000   5.000047e-02   4.988833e-02   1.121389e-04   1.143705e-02   8.743513e+04
   5.000047e-02
-    FW          2000   5.000000e-02   4.999569e-02   4.308009e-06   2.376583e-02   8.415443e+04
+    FW          2000   5.000000e-02   4.999569e-02   4.308009e-06   2.346575e-02   8.523059e+04
   5.000000e-02
-  Last          2446   5.000000e-02   4.999898e-02   1.018029e-06   2.948269e-02   8.296393e+04
+  Last          2446   5.000000e-02   4.999898e-02   1.018029e-06   2.910474e-02   8.404129e+04
 -------------------------------------------------------------------------------------------------
   5.000000e-02
 ----------------
@@ -92,17 +92,17 @@ MOMENTUM: nothing GRADIENTTYPE: FrankWolfe.BlockVector{Float64, Vector{Float64},
 -------------------------------------------------------------------------------------------------
   Type     Iteration         Primal           Dual       Dual Gap           Time         It/sec
 -------------------------------------------------------------------------------------------------
-     I             1   1.000000e+00           -Inf            Inf   0.000000e+00            Inf
+     I             1   3.778464e+00  -4.022154e+01   4.400000e+01   0.000000e+00            Inf
 ----------------
         Infeas
 ----------------
 
-  1.000000e+00
-    FW          1000   5.000035e-02   4.989949e-02   1.008578e-04   8.629954e-02   1.158755e+04
-  5.000035e-02
-    FW          2000   5.000000e-02   4.999584e-02   4.164414e-06   9.885174e-02   2.023232e+04
+  3.778464e+00
+    FW          1000   5.000044e-02   4.988944e-02   1.110044e-04   8.973317e-02   1.114415e+04
+  5.000044e-02
+    FW          2000   5.000000e-02   4.999555e-02   4.455142e-06   1.019249e-01   1.962229e+04
   5.000000e-02
-  Last          2449   5.000000e-02   4.999898e-02   1.023844e-06   1.047112e-01   2.338814e+04
+  Last          2473   5.000000e-02   4.999901e-02   9.865777e-07   1.081077e-01   2.287533e+04
 -------------------------------------------------------------------------------------------------
   5.000000e-02
 ----------------</code></pre><p>As an alternative to Block-Coordiante Frank-Wolfe (BCFW), one can also run alternating linear minimization with standard Frank-Wolfe algorithm. These methods perform then the full (simulatenous) update at each iteration. In this example we also use <a href="../../reference/1_algorithms/#FrankWolfe.away_frank_wolfe-NTuple{4, Any}"><code>FrankWolfe.away_frank_wolfe</code></a>.</p><pre><code class="language-julia hljs">_, _, _, _, _, afw_trajectory = FrankWolfe.alternating_linear_minimization(
@@ -132,11 +132,11 @@ LMO: FrankWolfe.ProductLMO{2, Tuple{FrankWolfe.ProbabilitySimplexOracle{Float64}
 ----------------
 
   2.010582e+00
-  Last           171   5.000000e-02   4.999908e-02   9.177388e-07   9.444486e-01   1.810580e+02             84
+  Last           171   5.000000e-02   4.999908e-02   9.177388e-07   9.524481e-01   1.795373e+02             84
 ----------------------------------------------------------------------------------------------------------------
   5.000000e-02
 ----------------
-    PP           171   5.000000e-02   4.999908e-02   9.177388e-07   1.019720e+00   1.676931e+02             84
+    PP           171   5.000000e-02   4.999908e-02   9.177388e-07   1.028791e+00   1.662145e+02             84
 ----------------------------------------------------------------------------------------------------------------
   5.000000e-02
 ----------------</code></pre><h2 id="Running-Alternating-Projections"><a class="docs-heading-anchor" href="#Running-Alternating-Projections">Running Alternating Projections</a><a id="Running-Alternating-Projections-1"></a><a class="docs-heading-anchor-permalink" href="#Running-Alternating-Projections" title="Permalink"></a></h2><p>Unlike ALM, Alternating Projections (AP) is only suitable for feasibility problems. One omits the objective and gradient as parameters.</p><pre><code class="language-julia hljs">_, _, _, _, ap_trajectory = FrankWolfe.alternating_projections(
@@ -156,18 +156,18 @@ GRADIENTTYPE: Vector{Vector{Float64}}
 ----------------------------------------------------------------------------------
   Type     Iteration       Dual Gap         Infeas           Time         It/sec
 ----------------------------------------------------------------------------------
-     I             1   4.044891e-01   2.022445e-01   0.000000e+00            Inf
-    FW           100   1.045308e-04   5.000040e-02   1.201520e+00   8.322791e+01
-    FW           200   2.524997e-05   5.000002e-02   1.781785e+00   1.122470e+02
-    FW           300   1.122811e-05   5.000000e-02   2.484104e+00   1.207679e+02
-    FW           400   6.334101e-06   5.000000e-02   3.305951e+00   1.209939e+02
-    FW           500   4.028960e-06   5.000000e-02   4.161921e+00   1.201368e+02
-    FW           600   2.823896e-06   5.000000e-02   5.089066e+00   1.178998e+02
-    FW           700   2.088682e-06   5.000000e-02   6.066854e+00   1.153811e+02
-    FW           800   1.569986e-06   5.000000e-02   7.091921e+00   1.128044e+02
-    FW           900   1.258972e-06   5.000000e-02   8.136292e+00   1.106155e+02
-    FW          1000   9.944106e-07   5.000000e-02   9.242113e+00   1.082004e+02
-  Last          1000   9.944106e-07   5.000000e-02   9.252507e+00   1.080788e+02
+     I             1   4.039013e-01   2.019506e-01   0.000000e+00            Inf
+    FW           100   1.045308e-04   5.000040e-02   1.155679e+00   8.652921e+01
+    FW           200   2.524997e-05   5.000002e-02   1.699030e+00   1.177143e+02
+    FW           300   1.122811e-05   5.000000e-02   2.387810e+00   1.256381e+02
+    FW           400   6.334101e-06   5.000000e-02   3.147616e+00   1.270803e+02
+    FW           500   4.028960e-06   5.000000e-02   3.965332e+00   1.260928e+02
+    FW           600   2.823896e-06   5.000000e-02   4.852237e+00   1.236543e+02
+    FW           700   2.088682e-06   5.000000e-02   5.794370e+00   1.208069e+02
+    FW           800   1.569986e-06   5.000000e-02   6.746710e+00   1.185763e+02
+    FW           900   1.258972e-06   5.000000e-02   7.739980e+00   1.162794e+02
+    FW          1000   9.944106e-07   5.000000e-02   8.769052e+00   1.140374e+02
+  Last          1000   9.944106e-07   5.000000e-02   8.779542e+00   1.139012e+02
 ----------------------------------------------------------------------------------</code></pre><h2 id="Plotting-the-resulting-trajectories"><a class="docs-heading-anchor" href="#Plotting-the-resulting-trajectories">Plotting the resulting trajectories</a><a id="Plotting-the-resulting-trajectories-1"></a><a class="docs-heading-anchor-permalink" href="#Plotting-the-resulting-trajectories" title="Permalink"></a></h2><pre><code class="language- hljs">labels = [&quot;BCFW - Full&quot;, &quot;BCFW - Cyclic&quot;, &quot;BCFW - Stochastic&quot;, &quot;AFW&quot;, &quot;AP&quot;]
 
-plot_trajectories(trajectories, labels, xscalelog=true)</code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_0_fw_visualized/">« Visualization of Frank-Wolfe running on a 2-dimensional polytope</a><a class="docs-footer-nextpage" href="../docs_1_mathopt_lmo/">Comparison with MathOptInterface on a Probability Simplex »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Wednesday 29 November 2023 17:17">Wednesday 29 November 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+plot_trajectories(trajectories, labels, xscalelog=true)</code></pre><hr/><p><em>This page was generated using <a href="https://github.com/fredrikekre/Literate.jl">Literate.jl</a>.</em></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../docs_0_fw_visualized/">« Visualization of Frank-Wolfe running on a 2-dimensional polytope</a><a class="docs-footer-nextpage" href="../docs_1_mathopt_lmo/">Comparison with MathOptInterface on a Probability Simplex »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Monday 4 December 2023 09:57">Monday 4 December 2023</span>. Using Julia version 1.6.7.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
